--- a/app/src/main/res/layout/activity_cadastro_endereco.xml
+++ b/app/src/main/res/layout/activity_cadastro_endereco.xml
@@ -40,6 +40,24 @@
                     android:layout_height="1dp"
                     android:layout_marginBottom="2dp"
                     android:layout_marginTop="2dp" />
+
+                <TextView
+                    android:id="@+id/TexViewEnderecoCep"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="6dp"
+                    android:text="@string/endereco_cep"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/editText_endereco_cep"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/digite_seu_cep"
+                    android:inputType="numberSigned"
+                    android:maxLength="9" />
+
                 <TextView
                     android:id="@+id/TexViewEnderecoLogradouro"
                     android:layout_width="fill_parent"
@@ -48,6 +66,7 @@
                     android:text="@string/endereco_logradouro"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:textStyle="bold" />
+
                 <EditText
                     android:id="@+id/editText_endereco_logradouro"
                     android:layout_width="fill_parent"
@@ -65,6 +84,7 @@
                     android:layout_height="1dp"
                     android:layout_marginBottom="2dp"
                     android:layout_marginTop="2dp" />
+
                 <TextView
                     android:id="@+id/TexViewEnderecoNumero"
                     android:layout_width="fill_parent"
@@ -73,6 +93,7 @@
                     android:text="@string/endereco_numero"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:textStyle="bold" />
+
                 <EditText
                     android:id="@+id/editText_endereco_numero"
                     android:layout_width="fill_parent"
@@ -91,6 +112,7 @@
                     android:layout_height="1dp"
                     android:layout_marginBottom="2dp"
                     android:layout_marginTop="2dp" />
+
                 <TextView
                     android:id="@+id/TexViewEnderecoComplemento"
                     android:layout_width="fill_parent"
@@ -99,6 +121,7 @@
                     android:text="@string/endereco_complemento"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:textStyle="bold" />
+
                 <EditText
                     android:id="@+id/editText_endereco_complemento"
                     android:layout_width="fill_parent"
@@ -116,6 +139,7 @@
                     android:layout_height="1dp"
                     android:layout_marginBottom="2dp"
                     android:layout_marginTop="2dp" />
+
                 <TextView
                     android:id="@+id/TexViewEnderecoBairro"
                     android:layout_width="fill_parent"
@@ -124,6 +148,7 @@
                     android:text="@string/endereco_bairro"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:textStyle="bold" />
+
                 <EditText
                     android:id="@+id/editText_endereco_bairro"
                     android:layout_width="fill_parent"
@@ -141,95 +166,90 @@
                     android:layout_height="1dp"
                     android:layout_marginBottom="2dp"
                     android:layout_marginTop="2dp" />
-                <TextView
-                    android:id="@+id/TexViewEnderecoCidade"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="6dp"
-                    android:text="@string/endereco_cidade"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textStyle="bold" />
-                <EditText
-                    android:id="@+id/editText_endereco_cidade"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_margin="4dp"
-                    android:layout_marginTop="31dp"
-                    android:ems="10"
-                    android:hint="@string/digite_sua_cidade"
-                    android:inputType="text" />
 
                 <View
                     android:layout_width="fill_parent"
                     android:layout_height="1dp"
                     android:layout_marginBottom="2dp"
                     android:layout_marginTop="2dp" />
-                <TextView
-                    android:id="@+id/TexViewEnderecoUf"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="6dp"
-                    android:text="@string/endereco_uf"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textStyle="bold" />
-                <Spinner android:id="@+id/spinner_endereco_uf"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_margin="4dp"
-                    android:layout_marginTop="31dp"
-                    android:ems="10"
-                    android:hint="@string/escolha_sua_uf"
-                    android:entries="@array/uf"
-                    android:spinnerMode="dropdown"/>
 
-                <View
-                    android:layout_width="fill_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginBottom="2dp"
-                    android:layout_marginTop="2dp" />
-                <TextView
-                    android:id="@+id/TexViewEnderecoCep"
-                    android:layout_width="fill_parent"
+                <LinearLayout
+                    android:orientation="horizontal"
                     android:layout_height="wrap_content"
-                    android:layout_margin="6dp"
-                    android:text="@string/endereco_cep"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textStyle="bold" />
-                <EditText
-                    android:id="@+id/editText_endereco_cep"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_margin="4dp"
-                    android:layout_marginTop="31dp"
-                    android:ems="10"
-                    android:maxLength="9"
-                    android:hint="@string/digite_seu_cep"
-                    android:inputType="numberSigned" />
+                    android:layout_width="match_parent">
 
-                <View
-                    android:layout_width="fill_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginBottom="2dp"
-                    android:layout_marginTop="2dp" />
+                    <TextView
+                        android:id="@+id/TexViewEnderecoCidade"
+                        android:layout_width="180dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="6dp"
+                        android:text="@string/endereco_cidade"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/TexViewEnderecoUf"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="6dp"
+                        android:text="@string/endereco_uf"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent">
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_height="match_parent"
+                        android:layout_width="180dp">
+
+                        <EditText
+                            android:id="@+id/editText_endereco_localidade"
+                            android:layout_width="300dp"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="4dp"
+                            android:layout_marginTop="31dp"
+                            android:ems="10"
+                            android:hint="@string/digite_sua_cidade"
+                            android:inputType="text" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/gradiente_spinner"
+                        android:orientation="horizontal">
+
+                        <Spinner
+                            android:id="@+id/ufSpinner"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            style="@style/Widget.AppCompat.DropDownItem.Spinner"/>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
                 <Button
                     android:id="@+id/botao_finalizar_cadastro_endereco"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginTop="24dp"
+                    android:layout_marginTop="10dp"
                     android:background="@drawable/shapebutton"
                     android:text="@string/finalizar_cadastro" />
 
             </LinearLayout>
+
         </ScrollView>
+
     </LinearLayout>
+
 </RelativeLayout>
 
 
