--- a/app/src/main/res/layout/activity_cadastro_fornecedor.xml
+++ b/app/src/main/res/layout/activity_cadastro_fornecedor.xml
@@ -152,11 +152,20 @@
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:textStyle="bold" />
 
-                <Spinner
-                    android:id="@+id/Spinner_horarios_funcionamento"
-                    android:layout_width="match_parent"
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:background="@drawable/gradiente_spinner"
                     android:layout_height="wrap_content"
-                    android:spinnerMode="dialog" />
+                    android:layout_width="match_parent">
+
+                    <Spinner
+                        android:id="@+id/horariosSpinner"
+                        android:layout_margin="4dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        style="@style/Widget.AppCompat.DropDownItem.Spinner"/>
+
+                </LinearLayout>
 
                 <View
                     android:layout_width="fill_parent"
@@ -213,20 +222,12 @@
                     android:hint="@string/repita_sua_senha"
                     android:inputType="textPassword" />
 
-                <View
-                    android:layout_width="fill_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginBottom="2dp"
-                    android:layout_marginTop="2dp" />
-
                 <Button
                     android:id="@+id/botao_cadastrar_fornecedor"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
                     android:layout_below="@+id/editText_senha2"
-                    android:layout_marginTop="24dp"
+                    android:layout_marginTop="10dp"
                     android:background="@drawable/shapebutton"
                     android:text="@string/cadastrar_novo_fornecedor" />
 
