--- a/app/src/main/res/layout/activity_cadastro_pet.xml
+++ b/app/src/main/res/layout/activity_cadastro_pet.xml
@@ -76,7 +76,7 @@
 
                         <TextView
                             android:id="@+id/TexViewCadastroIdadePet"
-                            android:layout_width="120dp"
+                            android:layout_width="140dp"
                             android:layout_height="wrap_content"
                             android:layout_margin="6dp"
                             android:text="@string/prompt_idade_pet"
@@ -96,27 +96,43 @@
                 </LinearLayout>
 
                 <LinearLayout
-                android:orientation="horizontal"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent">
+                    android:orientation="horizontal"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent">
 
-                    <Spinner
-                        android:id="@+id/idadeSpinner"
-                        android:layout_margin="4dp"
-                        android:layout_width="120dp"
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:background="@drawable/gradiente_spinner"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/TexViewCadastroIdadePet"/>
+                        android:layout_width="170dp">
 
-                    <Spinner
-                        android:id="@+id/tipoSpinner"
-                        android:layout_margin="4dp"
-                        android:layout_below="@+id/TexViewCadastroTipoPet"
-                        android:paddingLeft="20dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
+                        <Spinner
+                            android:id="@+id/idadeSpinner"
+                            android:layout_margin="4dp"
+                            android:layout_width="170dp"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/TexViewCadastroIdadePet"
+                            style="@style/Widget.AppCompat.DropDownItem.Spinner"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:background="@drawable/gradiente_spinner"
+                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent">
+
+                        <Spinner
+                            android:id="@+id/tipoSpinner"
+                            android:layout_margin="4dp"
+                            android:layout_below="@+id/TexViewCadastroTipoPet"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            style="@style/Widget.AppCompat.DropDownItem.Spinner"/>
+
+                    </LinearLayout>
+
                 </LinearLayout>
-
-
 
                 <View
                     android:layout_width="fill_parent"
@@ -202,19 +218,26 @@
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:textStyle="bold" />
 
-                <Spinner
-                    android:id="@+id/porteSpinner"
-                    android:layout_width="match_parent"
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:background="@drawable/gradiente_spinner"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp" />
+                    android:layout_width="match_parent">
+
+                    <Spinner
+                        android:id="@+id/porteSpinner"
+                        android:layout_margin="4dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/TexViewCadastroPortePetPet"
+                        style="@style/Widget.AppCompat.DropDownItem.Spinner"/>
+
+                </LinearLayout>
 
                 <Button
                     android:id="@+id/botao_cadastrar_pet"
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_below="@+id/editText_senha2"
                     android:layout_marginTop="24dp"
                     android:background="@drawable/shapebutton"
                     android:text="Cadastrar" />
