--- a/app/src/main/res/layout/activity_pets.xml
+++ b/app/src/main/res/layout/activity_pets.xml
@@ -8,7 +8,9 @@
         android:id="@+id/lv_pets"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
+        android:padding="8dp"
+        android:divider="@drawable/list_divider"
+        android:dividerHeight="1dp"
         android:layout_above="@+id/ll_main">
 
     </ListView>
