--- a/app/src/main/res/layout/activity_busca_estabelecimento.xml
+++ b/app/src/main/res/layout/activity_busca_estabelecimento.xml
@@ -38,6 +38,7 @@
             android:id="@+id/btnFiltroEstabelecimento"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/shapebutton"
             android:text="Filtro" />
 
     </LinearLayout>
