--- a/app/src/main/res/layout/activity_filtro_estabelecimento.xml
+++ b/app/src/main/res/layout/activity_filtro_estabelecimento.xml
@@ -25,12 +25,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:checked="true"
+            android:buttonTint="@color/colorPrimaryDark"
             android:text="Próximidade" />
 
         <CheckBox
             android:id="@+id/cbAva"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:buttonTint="@color/colorPrimaryDark"
             android:text="Avaliação" />
 
         <TextView
@@ -51,7 +53,9 @@
             android:id="@+id/sbRaio"
             android:layout_marginTop="5dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:progressTint="@color/colorPrimaryDark"
+            android:thumbTint="@color/colorPrimaryDark"/>
 
         <Button
             android:id="@+id/btnSalvarFiltro"
