--- a/app/src/main/res/layout/activity_filtro_servicos.xml
+++ b/app/src/main/res/layout/activity_filtro_servicos.xml
@@ -36,18 +36,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:checked="true"
+            android:buttonTint="@color/colorPrimaryDark"
             android:text="Próximidade" />
 
         <CheckBox
             android:id="@+id/cbAva"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:buttonTint="@color/colorPrimaryDark"
             android:text="Avaliação" />
 
         <CheckBox
             android:id="@+id/cbPreco"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:buttonTint="@color/colorPrimaryDark"
             android:text="Preço" />
 
         <TextView
@@ -68,7 +71,9 @@
             android:id="@+id/sbRaio"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp" />
+            android:layout_marginTop="5dp"
+            android:progressTint="@color/colorPrimaryDark"
+            android:thumbTint="@color/colorPrimaryDark"/>
 
         <Button
             android:id="@+id/btnSalvarFiltro"
