--- a/app/src/main/res/layout/activity_acesso_informacoes_estabelecimento.xml
+++ b/app/src/main/res/layout/activity_acesso_informacoes_estabelecimento.xml
@@ -29,7 +29,8 @@
             android:id="@+id/bt_salvar_favorito"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Favoritar" />
+            android:text="Favoritar"
+            android:visibility="visible" />
 
         <Button
             android:id="@+id/bt_remover_favorito"
